| Summary: | ASTERISK-30226: REGRESSION: res_crypto complains about the stir_shaken directory in /var/lib/asterisk/keys | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2022-09-13 09:59:56 | Date Closed: | 2022-09-16 05:57:56 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_crypto |
| Versions: | GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | With a recent change to res_crypto that throws a warning when there are non-regular-files in /var/lib/asterisk/keys. This catches sub-directories like /var/lib/asterisk/keys/stir_shaken.
| ||
| Comments: | By: George Joseph (gjoseph) 2022-09-13 10:04:11.821-0500 It needs to allow directories even if it doesn't descend into them. By: Friendly Automation (friendly-automation) 2022-09-16 05:57:57.384-0500 Change 19216 merged by Friendly Automation: res_crypto: don't complain about directories [https://gerrit.asterisk.org/c/asterisk/+/19216|https://gerrit.asterisk.org/c/asterisk/+/19216] By: Friendly Automation (friendly-automation) 2022-09-16 05:58:11.841-0500 Change 19212 merged by Friendly Automation: res_crypto: don't complain about directories [https://gerrit.asterisk.org/c/asterisk/+/19212|https://gerrit.asterisk.org/c/asterisk/+/19212] By: Friendly Automation (friendly-automation) 2022-09-16 05:58:14.225-0500 Change 19213 merged by Friendly Automation: res_crypto: don't complain about directories [https://gerrit.asterisk.org/c/asterisk/+/19213|https://gerrit.asterisk.org/c/asterisk/+/19213] By: Friendly Automation (friendly-automation) 2022-09-16 05:58:18.184-0500 Change 19215 merged by Friendly Automation: res_crypto: don't complain about directories [https://gerrit.asterisk.org/c/asterisk/+/19215|https://gerrit.asterisk.org/c/asterisk/+/19215] By: Friendly Automation (friendly-automation) 2022-09-16 05:58:21.967-0500 Change 19214 merged by Friendly Automation: res_crypto: don't complain about directories [https://gerrit.asterisk.org/c/asterisk/+/19214|https://gerrit.asterisk.org/c/asterisk/+/19214] | ||